--- a/app/src/main/res/layout/activity_barcode.xml
+++ b/app/src/main/res/layout/activity_barcode.xml
@@ -4,8 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#DCDCDC"
     tools:context="com.example.poline.data_code.Barcode">
 
 
-
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="3000sp"
+        android:layout_height="3000sp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="100sp"
+        android:layout_marginBottom="100sp"
+        android:layout_marginLeft="50sp"
+        android:layout_marginRight="50sp"
+        app:srcCompat="" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="SCAN"
+        android:layout_marginTop="10sp"
+        android:fontFamily="monospace"/>
 </RelativeLayout>
