--- a/app/src/main/res/layout/activity_barcode.xml
+++ b/app/src/main/res/layout/activity_barcode.xml
@@ -27,4 +27,10 @@
         android:text="SCAN"
         android:layout_marginTop="10sp"
         android:fontFamily="monospace"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:text="TextView"/>
 </RelativeLayout>
